# drone-digital-twin

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cpp/include/: drone.hpp  environment.hpp  sensor.hpp  vec3.hpp
cpp/src/: simulator.cpp
python/: requirements.txt
python/scripts/: vis_twin.py
